tomcatrc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcatserver
  labels: 
    app: tomcatserver
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: tomcatserver
