tomcatingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: tomcat-ingress
spec:
  rules:
  - host: tomcat.tony.click  
    http: 
      paths:
      - path: /    
        backend:
          serviceName: tomcatserver
          servicePort: 80
